--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -157,7 +157,7 @@ Keywords: bias, causal model, clinical trial, confounding/collapsibility, observ
 ------------------------------------------------------------------------
 
 ::: {.callout-note appearance="simple"  collapse="true" title="前回までのあらすじ"}
-はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。父に教わるが、娘はいまひとつ腑に落ちないのだった。
+はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。父に交絡調整について教わるが、娘はいまひとつ腑に落ちないのだった。
 :::
 
 ### 第3の因子なんて無数にあるよね？
