--- a/index.qmd
+++ b/index.qmd
@@ -166,10 +166,10 @@ A toolkit for survival and competing risks analysis in R — a more technical si
 
 ## A Conversation on Causality at Our Table — *How I Learned Research from My Father*
 
-A series of short, warm stories about learning research, written in both English and Japanese. Through conversations between a father and daughter, the essentials of research unfold naturally. All of it is shared freely — like something warm to drink during a hallway conversation at a conference, there whenever you need a quiet break.
+A series of short, warm stories about learning research, written in both English and Japanese. Through conversations between a father and daughter, the *way researchers think* — from questions and assumptions to numbers and conclusion — unfold naturally. All of it is shared freely, like something warm to drink during a hallway conversation at a conference, there whenever you need a quiet break.
 
-- For readers who want to grasp the *feel* of research before opening a textbook  
-- Light, conversational chapters you can read in a few minutes  
+- For readers who want to grasp the *feel* of research before opening a textbook
+- Light, conversational chapters — each readable on its own, yet forming a larger story when read together
 - From Study Design → Frequentist Thinking → Understanding Effects and Time → Adjusting for Bias → Causal Inference → Publication
 
 **[Read in English](./en/index.html)**  /  **[Read in Japanese](./jp/index.html)** 
@@ -177,7 +177,7 @@ A series of short, warm stories about learning research, written in both English
 
 <div class="project-card">
 
-## Books and related contents
+## Books and learning materials
 
 - **Causal Inference for Medical Research I. Generalized Linear Models** (in Japanese)
 
@@ -189,13 +189,12 @@ A series of short, warm stories about learning research, written in both English
 
   [Learning materials for this series](https://righteous-manager-7af.notion.site/d2920bb2ebb9474bb96702d29febcb53)
 
-- **Professor Giant Salamander's Medical Statistics Seminar: Paper Reading Level Up 30** (in Japanese)
+- **Professor Giant Salamander's Biotatistics Seminar: Paper Reading Level Up 30** (in Japanese)
 
   [Publisher site](https://www.yodosha.co.jp/yodobook/book/9784758117975/)
 
   [Learning materials for this book](https://righteous-manager-7af.notion.site/86216e785f224f3a94af349685e730d2)
   
-
 - **Sample Sizes for Clinical, Laboratory and Epidemiology Studies** (Japanese translation)
 
   [Publisher site](https://www.kyoto-up.or.jp/books/9784814003822.html)
@@ -211,7 +210,7 @@ A series of short, warm stories about learning research, written in both English
 
 <img src="image/portrait.jpg" width="120" class="author-photo">
 
-Shiro Tanaka is a biostatistician and Professor of Clinical Biostatistics at Kyoto University. His work sits at the intersection of causal inference and clinical research. This site collects some of his research, teaching materials, and essays, shared freely for anyone who finds them useful.
+Alongside developing methods and tools, he is interested in how statistical ideas are understood, interpreted, and used in practice—especially where methods, assumptions, and human judgment meet. This site collects some of his research, teaching materials, and essays, shared freely for anyone who finds them useful.
 
 **[More information](./about/)**
 
