--- a/jp/causal-inference-4.qmd
+++ b/jp/causal-inference-4.qmd
@@ -180,7 +180,7 @@ Keywords: causal model, probability model
 :::
 
 ::: voice-father
-お父さん「実際にナプキンに式を書いたのは理由がある。同じものをDAGと数式の2通りで表現していることを知ってほしかったんだ。いくつかの抽象的な表現を使うことは意外に多い。ここにマグカップがあるよね」
+お父さん「具体的な式をナプキンを書いたのは理由がある。同じものをDAGと数式の2通りで表現していることを知ってほしかったんだ。抽象的な表現を併用することは意外に多い。ここにマグカップがあるよね」
 :::
 
 ::: voice-daughter
