--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -373,7 +373,7 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 
 - Greenland S, Pearl J, Robins JM. Causal diagrams for epidemiologic research. Epidemiology 1999;10(1):37-48
 
-### エピソード、用語集
+### このシリーズとRスクリプト
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
 - [A Subtle Distinction between Common Causes and Confounders](causal-inference-2.html)
@@ -381,4 +381,11 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 - [A Circle, an Equation, and a Cylinder](causal-inference-4.html)
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias](causal-inference-5.html)
 
+### 過去のシリーズと用語集
+
+- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
+- [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [Silent Confusions Hidden in Percentages](effects-1.html)
+- [From Risk to Logistic Regression](logistic-regression-1.html)
+- [What Data Cannot Tell Us](truth-1.html)
 - [Statistical Terms in Plain Language](glossary.html)
