--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -431,7 +431,7 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 
 - [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
-### エピソード、用語集、Rスクリプト
+### このシリーズとRスクリプト
 
 - [From Risk to Logistic Regression](logistic-regression-1.html)
 - [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
@@ -439,6 +439,11 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
 - [Simpson's paradox](logistic-regression-5.html)
 
-- [Statistical Terms in Plain Language](glossary.html)
-
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
+
+### 過去のシリーズと用語集
+
+- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
+- [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [Silent Confusions Hidden in Percentages](effects-1.html)
+- [Statistical Terms in Plain Language](glossary.html)
