--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -251,7 +251,7 @@ probability model, simulation, survival/competing-risk, language/writing
 :::
 
 ::: voice-father
-お父さん「そうだね、人間が使う言葉とは思えないとはこっちも思うよ。でも、本題に入る前につまづいたらもったいない。[もしわからない言葉が出てきたらいつでもおいで](glossary.html)。まあ、とにかく、どのデータの型にどんな確率モデルを使うのか、パターンを知ることだね」
+お父さん「そうだね、人間が使う言葉とは思えないとはこっちも思うよ。でも、本題に入る前につまづいたらもったいない。もし、統計でわからない言葉が出てきたら、[**いつでもおいで**](glossary.html)。まあ、とにかく、どのデータの型にどんな確率モデルを使うのか、パターンを知ることだね」
 :::
 
 ::: voice-daughter
