--- a/about/index.qmd
+++ b/about/index.qmd
@@ -8,7 +8,7 @@
 
 <div class="about-intro">
 
-## About Shiro Tanaka
+## About gestimation/Shiro Tanaka
 
 <img src="../image/portrait.jpg" width="130" style="border-radius: 12px; float:right; margin-left:1rem;"/>
 
