--- a/en/study-design-3.qmd
+++ b/en/study-design-3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "A First Step into Survival and Competing Risks Analysis with R"
+title: "Outcomes: The Bridge from Data Collection to Analysis"
 description: "Every study starts with a question. How do we frame PICO/PECO? How do we choose outcomes? How do we protect against bias? The daughter learn what do researchers mean by outcome from her father."
 format:
   html:
